--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
           <div class="project-card">
               <img src="img/ip-routing.jpeg" class="project-img" alt="">
               <div class="project-content">
-                  <h1 class="project-title">Network Monitoring and Management System</h1>
+                  <h1 class="project-title">Network Monitoring</h1>
                   <p class="project-info">
                     Develop a comprehensive system for monitoring and managing network infrastructure, including real-time monitoring of network traffic, and device health.
                   </p>
